# aero-ros-pkg

./: .gitignore  Dockerfile.indigo  Dockerfile.kinetic
aero_bringup/: CMakeLists.txt  package.xml
aero_bringup/launch/: aero_arm_bringup.launch  aero_bringup.launch  model.launch
aero_bringup/src/: AeroControllers.cc  Angle2Stroke.cc  Stroke2Angle.cc  UnusedAngle2Stroke.hh
aero_bringup/typeFCET/: AeroControllerProto.cc  AeroControllerProto.hh  AeroControllers.cc  AeroControllers.hh  Angle2Stroke.hh  CMakeLists.txt  Constants.hh  Stroke2Angle.hh
aero_description/: aero-wheels.urdf.xacro  arm bug fix to do  frames.gv  setup.sh
aero_description/arm_typeC/: aero_upper.txt  robot.cfg
aero_description/arm_typeCTy/: aero_upper.txt  robot.cfg
aero_description/mover_typeE/: robot.cfg
aero_description/scripts/: configure_controllers.sh
aero_description/typeFCETy/: robot.cfg
aero_description/typeMS/: robot.cfg
aero_hardware_interface/: AeroControllers.cc  Angle2Stroke.cc  AngleJointNames.cc  AngleJointNames.hh  CMakeLists.txt  Stroke2Angle.cc  UnusedAngle2Stroke.hh  typeFCESy_Constants.hh
aero_move_base/: CMakeLists.txt  package.xml
aero_moveit_config/: .~lock.test1.csv#  2019-05-22-20-25-43.bag  test1.csv
aero_moveit_config/config/: AeroRobotFCET.srdf
aero_robot_interface/: CMakeLists.txt  package.xml  stroke_convert.cc  stroke_convert.hh
aero_robot_interface/typeFCET/: AeroControllers.hh  Angle2Stroke.cc  Stroke2Angle.cc
aero_ros_controller/: CMakeLists.txt  package.xml
aero_ros_controller/src/: AeroGrasp.hh  AeroHandController.cc  AeroMoveBaseRH.hh  aero_robot_hardware.cpp  aero_robot_hardware.h  aero_ros_controller.cpp
aero_samples/: CMakeLists.txt  sample.launch
aero_samples/src/: #ik_side.cc#  2019-02-22-17-07-40.bag  depth_sample.cpp  fk.cc  hand.cc  ik_side.cc  joy_controll.cc  minimum.cc  side_grasp.cc  (+1 more)
aero_shop/: README.md
aero_startup/: aero_arm_bringup.launch  aero_bringup.launch  model.launch
aero_teleop/: CMakeLists.txt  package.xml
aero_typeFCESy_moveit_config/: CMakeLists.txt  package.xml
aero_typefcet_moveit_config/: CMakeLists.txt  package.xml
(+90 files in other folders)
