<?xml version="1.0"?>
<package>
  <name>aero_bringup</name>
  <version>2.1.0</version>
  <description>The aero_bringup package</description>

  <license>BSD</license>
  <maintainer email="hi.kondo@thk.co.jp">
    Hironori Kondo
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
